# kinematics_interface

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  codecov.yml  kinematics_interface.humble.repos  kinematics_interface.iron.repos  kinematics_interface.jazzy.repos  kinematics_interface.kilted.repos  kinematics_interface.rolling.repos  kinematics_interface.windows.rolling.repos  ros_controls.humble.repos  ros_controls.jazzy.repos  ros_controls.kilted.repos  ros_controls.rolling.repos
.github/workflows/: README.md  ci-coverage-build.yml  ci-format.yml  ci-ros-lint.yml  humble-abi-compatibility.yml  humble-binary-build-main.yml  humble-binary-build-testing.yml  humble-binary-build.yml  humble-coverage-build.yml  humble-debian-build.yml  humble-rhel-binary-build.yml  humble-rhel-semi-binary-build.yml  humble-semi-binary-build-main.yml  humble-semi-binary-build-testing.yml  humble-semi-binary-build.yml  humble-semi-binary-downstream-build.yml  humble-source-build.yml  iron-binary-build.yml  iron-debian-build.yml  iron-rhel-binary-build.yml  iron-semi-binary-build.yml  jazzy-abi-compatibility.yml  jazzy-binary-build.yml  jazzy-compatibility-build.yml  jazzy-coverage-build.yml  jazzy-debian-build.yml  jazzy-pre-commit.yml  jazzy-rhel-semi-binary-build.yml  jazzy-semi-binary-build.yml  jazzy-semi-binary-downstream-build.yml  jazzy-source-build.yml  reusable-industrial-ci-with-cache.yml  reusable-ros-tooling-source-build.yml  rolling-abi-compatibility.yml  rolling-binary-build-main.yml  rolling-binary-build-testing.yml  rolling-binary-build.yml  rolling-compatibility-build.yml  rolling-coverage-build.yml  rolling-debian-build.yml  (+9 more)
kdl_plugin/: CMakeLists.txt  kdl_plugin.xml  package.xml
kdl_plugin/include/kdl_plugin/: kdl_plugin.hpp
kdl_plugin/src/: kdl_plugin.cpp  kinematics_interface_kdl.cpp
kdl_plugin/test/: test_kdl_plugin.cpp
kinematics_interface/: CHANGELOG.rst  CMakeLists.txt  package.xml
kinematics_interface/include/kinematics_interface/: kinematics_interface.hpp  kinematics_interface_base.hpp  kinematics_interface_common_tests.hpp  visibility_control.h
kinematics_interface/src/: kinematics_interface.cpp  kinematics_interface_base.cpp
kinematics_interface/test/: kinematics_interface_common_tests.hpp
kinematics_interface_ikfast/: CMakeLists.txt  package.xml
kinematics_interface_ikfast/include/kinematics_interface_ikfast/: kinematics_interface_ikfast.hpp
kinematics_interface_ikfast/src/: kinematics_interface_ikfast.cpp
kinematics_interface_ikfast/test/: test_kinematics_interface_ikfast.cpp
kinematics_interface_kdl/: CHANGELOG.rst  CMakeLists.txt  kinematics_interface_kdl.xml  package.xml
kinematics_interface_kdl/include/kinematics_interface_kdl/: kinematics_interface_kdl.hpp
kinematics_interface_kdl/src/: kinematics_interface_kdl.cpp
kinematics_interface_kdl/test/: kinematics_interface_common_tests.hpp  test_kinematics_interface_kdl.cpp
kinematics_interface_pinocchio/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  kinematics_interface_pinocchio.xml  package.xml
kinematics_interface_pinocchio/.github/: dependabot.yml
kinematics_interface_pinocchio/.github/workflows/: ros2-humble-ci.yml  ros2-jazzy-ci.yml  ros2-rolling-ci.yml
kinematics_interface_pinocchio/include/kinematics_interface_pinocchio/: kinematics_interface_pinocchio.hpp
kinematics_interface_pinocchio/src/: kinematics_interface_pinocchio.cpp
kinematics_interface_pinocchio/test/: test_kinematics_interface_pinocchio.cpp
